Refactor MainPage